--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,51 +1,78 @@
 # 2023-11-02
 
-共 272 条
+共 298 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 16:00:48 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 17:00:48 GMT+0800 (China Standard Time) -->
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
-1. [现场视频：李克强同志遗体在京火化](https://so.toutiao.com/search?keyword=现场视频：李克强同志遗体在京火化)
-1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
-1. [中国女足帅位面临三种选择](https://so.toutiao.com/search?keyword=中国女足帅位面临三种选择)
+1. [北大李玲教授：医药反腐只是手段](https://so.toutiao.com/search?keyword=北大李玲教授：医药反腐只是手段)
+1. [女子辅导作业时崩溃扇孩子数十耳光](https://so.toutiao.com/search?keyword=女子辅导作业时崩溃扇孩子数十耳光)
+1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
+1. [村民抢药材损失谁来负](https://so.toutiao.com/search?keyword=村民抢药材损失谁来负)
+1. [媒体：水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=媒体：水庆霞更衣室与球员道别)
+1. [“街溜子”鱼冲人吐口水](https://so.toutiao.com/search?keyword=“街溜子”鱼冲人吐口水)
+1. [大闸蟹用抗生素浸泡防病？媒体辟谣](https://so.toutiao.com/search?keyword=大闸蟹用抗生素浸泡防病？媒体辟谣)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [老教师呼吁学校取消与教育无关任务](https://so.toutiao.com/search?keyword=老教师呼吁学校取消与教育无关任务)
+1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
+1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
+1. [美媒：拜登劝内塔尼亚胡考虑下台](https://so.toutiao.com/search?keyword=美媒：拜登劝内塔尼亚胡考虑下台)
+1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
+1. [日本邀请中亚五国参加G7外长会](https://so.toutiao.com/search?keyword=日本邀请中亚五国参加G7外长会)
+1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
+1. [湖媒：詹姆斯仍是地球上最伟大球员](https://so.toutiao.com/search?keyword=湖媒：詹姆斯仍是地球上最伟大球员)
 1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
+1. [两人因擦碰扭打后仿佛无事发生](https://so.toutiao.com/search?keyword=两人因擦碰扭打后仿佛无事发生)
+1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
+1. [媒体：本轮美联储加息周期或已结束](https://so.toutiao.com/search?keyword=媒体：本轮美联储加息周期或已结束)
+1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
+1. [加沙16所医院停止运转51所诊所关闭](https://so.toutiao.com/search?keyword=加沙16所医院停止运转51所诊所关闭)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [黎向以发射数枚迫击炮 以炮击回应](https://so.toutiao.com/search?keyword=黎向以发射数枚迫击炮+以炮击回应)
+1. [胡锡进谈中美将举行军控会谈](https://so.toutiao.com/search?keyword=胡锡进谈中美将举行军控会谈)
+1. [媒体：不得签订最低价协议意义重大](https://so.toutiao.com/search?keyword=媒体：不得签订最低价协议意义重大)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [“新一轮房改”来了？专家解读](https://so.toutiao.com/search?keyword=“新一轮房改”来了？专家解读)
+1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
+1. [专家解读日菲防务合作再次升级](https://so.toutiao.com/search?keyword=专家解读日菲防务合作再次升级)
+1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
+1. [男子晒控糖一年身体变化](https://so.toutiao.com/search?keyword=男子晒控糖一年身体变化)
+1. [乌镇峰会临近 大会氛围愈浓](https://so.toutiao.com/search?keyword=乌镇峰会临近+大会氛围愈浓)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [实拍哈马斯发射火箭弹击中以装甲车](https://so.toutiao.com/search?keyword=实拍哈马斯发射火箭弹击中以装甲车)
+1. [实测捷途旅行者越野表现](https://so.toutiao.com/search?keyword=实测捷途旅行者越野表现)
+1. [缅甸果敢民族民主同盟军谈电诈问题](https://so.toutiao.com/search?keyword=缅甸果敢民族民主同盟军谈电诈问题)
+1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
+1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
+1. [主人跳皮筋 狗狗和马儿当工具人](https://so.toutiao.com/search?keyword=主人跳皮筋+狗狗和马儿当工具人)
+1. [专家：10年后A股上市公司数将破万](https://so.toutiao.com/search?keyword=专家：10年后A股上市公司数将破万)
+1. [以议员观看以军遭袭惨烈画面落泪](https://so.toutiao.com/search?keyword=以议员观看以军遭袭惨烈画面落泪)
+1. [农户大葱滞销不要了 村民冒雪拔葱](https://so.toutiao.com/search?keyword=农户大葱滞销不要了+村民冒雪拔葱)
+1. [警方回应郑州一男子在马路上挥刀](https://so.toutiao.com/search?keyword=警方回应郑州一男子在马路上挥刀)
+1. [我国乳腺癌每年新发病例超40万](https://so.toutiao.com/search?keyword=我国乳腺癌每年新发病例超40万)
+1. [男子因高彩礼退婚拿16.8万辞职旅行](https://so.toutiao.com/search?keyword=男子因高彩礼退婚拿16.8万辞职旅行)
+1. [现场视频：李克强同志遗体在京火化](https://so.toutiao.com/search?keyword=现场视频：李克强同志遗体在京火化)
+1. [中国女足帅位面临三种选择](https://so.toutiao.com/search?keyword=中国女足帅位面临三种选择)
 1. [证监会：打击伪私募等非法金融活动](https://so.toutiao.com/search?keyword=证监会：打击伪私募等非法金融活动)
 1. [男子钓鱼遇“街溜子”鱼冲人吐口水](https://so.toutiao.com/search?keyword=男子钓鱼遇“街溜子”鱼冲人吐口水)
 1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
-1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
-1. [老教师呼吁学校取消与教育无关任务](https://so.toutiao.com/search?keyword=老教师呼吁学校取消与教育无关任务)
 1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
-1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
 1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
-1. [以议员观看以军遭袭惨烈画面落泪](https://so.toutiao.com/search?keyword=以议员观看以军遭袭惨烈画面落泪)
-1. [缅甸果敢民族民主同盟军谈电诈问题](https://so.toutiao.com/search?keyword=缅甸果敢民族民主同盟军谈电诈问题)
 1. [身高1米45命案在逃嫌疑人已自杀](https://so.toutiao.com/search?keyword=身高1米45命案在逃嫌疑人已自杀)
 1. [男子鞋底藏90万元金条闯关步伐露馅](https://so.toutiao.com/search?keyword=男子鞋底藏90万元金条闯关步伐露馅)
 1. [主持人评村民抢药材：损失谁来负](https://so.toutiao.com/search?keyword=主持人评村民抢药材：损失谁来负)
-1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
-1. [两人因擦碰扭打后仿佛无事发生](https://so.toutiao.com/search?keyword=两人因擦碰扭打后仿佛无事发生)
-1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
-1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
 1. [男孩点燃居民房路边杂物](https://so.toutiao.com/search?keyword=男孩点燃居民房路边杂物)
 1. [联合国秘书长谴责袭击加沙难民营](https://so.toutiao.com/search?keyword=联合国秘书长谴责袭击加沙难民营)
-1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
-1. [“新一轮房改”来了？专家解读](https://so.toutiao.com/search?keyword=“新一轮房改”来了？专家解读)
-1. [主人跳皮筋 狗狗和马儿当工具人](https://so.toutiao.com/search?keyword=主人跳皮筋+狗狗和马儿当工具人)
 1. [山东将有大风天气](https://so.toutiao.com/search?keyword=山东将有大风天气)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
 1. [深交所：终止福华化学上市审核](https://so.toutiao.com/search?keyword=深交所：终止福华化学上市审核)
-1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
 1. [暖心版公主请上车](https://so.toutiao.com/search?keyword=暖心版公主请上车)
 1. [福华化学撤回发行上市申请](https://so.toutiao.com/search?keyword=福华化学撤回发行上市申请)
-1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
-1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
 1. [呼和浩特发布最新人事任免](https://so.toutiao.com/search?keyword=呼和浩特发布最新人事任免)
-1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
 1. [11月东北等地存低温雨雪灾害风险](https://so.toutiao.com/search?keyword=11月东北等地存低温雨雪灾害风险)
 1. [希腊总理米佐塔基斯将访华](https://so.toutiao.com/search?keyword=希腊总理米佐塔基斯将访华)
-1. [警方回应郑州一男子在马路上挥刀](https://so.toutiao.com/search?keyword=警方回应郑州一男子在马路上挥刀)
 1. [媒体：给学生减负也要给教师减负](https://so.toutiao.com/search?keyword=媒体：给学生减负也要给教师减负)
 1. [闲鱼回应大学生低价“卖母校”](https://so.toutiao.com/search?keyword=闲鱼回应大学生低价“卖母校”)
 1. [7个瞬间看歼-20逐梦蓝天](https://so.toutiao.com/search?keyword=7个瞬间看歼-20逐梦蓝天)
@@ -54,7 +81,6 @@
 1. [中外代表共议应对气候与粮食危机](https://so.toutiao.com/search?keyword=中外代表共议应对气候与粮食危机)
 1. [多地景区宣布免费开放](https://so.toutiao.com/search?keyword=多地景区宣布免费开放)
 1. [巴勒斯坦一青年向以军扔石块被射杀](https://so.toutiao.com/search?keyword=巴勒斯坦一青年向以军扔石块被射杀)
-1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
 1. [国美总部已人去楼空](https://so.toutiao.com/search?keyword=国美总部已人去楼空)
 1. [女子路怒和情侣起冲突 一男子被咬](https://so.toutiao.com/search?keyword=女子路怒和情侣起冲突+一男子被咬)
 1. [湖南一医院要解聘全体员工](https://so.toutiao.com/search?keyword=湖南一医院要解聘全体员工)
