--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,77 +1,90 @@
 # 2023-11-02
 
-共 316 条
+共 329 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 18:01:00 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 19:00:59 GMT+0800 (China Standard Time) -->
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
-1. [网友连续3天拍到女孩被前后桌夹击](https://so.toutiao.com/search?keyword=网友连续3天拍到女孩被前后桌夹击)
-1. [嫌犯尚金勇搜捕细节：森林发现尸体](https://so.toutiao.com/search?keyword=嫌犯尚金勇搜捕细节：森林发现尸体)
+1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
+1. [中方回应中缅边境战略城镇失去控制](https://so.toutiao.com/search?keyword=中方回应中缅边境战略城镇失去控制)
+1. [传说500公里的加沙地道长啥样](https://so.toutiao.com/search?keyword=传说500公里的加沙地道长啥样)
+1. [女孩连续3天被后桌挤压抓头发](https://so.toutiao.com/search?keyword=女孩连续3天被后桌挤压抓头发)
+1. [曝江苏一副市长与女同事暧昧](https://so.toutiao.com/search?keyword=曝江苏一副市长与女同事暧昧)
 1. [水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=水庆霞更衣室与球员道别)
-1. [80岁大娘骑二八杠卖菜身轻如燕上车](https://so.toutiao.com/search?keyword=80岁大娘骑二八杠卖菜身轻如燕上车)
-1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
-1. [日本邀请中亚五国参加G7外长会](https://so.toutiao.com/search?keyword=日本邀请中亚五国参加G7外长会)
 1. [重庆辟谣“公租房不摇号直接分房”](https://so.toutiao.com/search?keyword=重庆辟谣“公租房不摇号直接分房”)
 1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
 1. [实拍哈马斯发射火箭弹击中以装甲车](https://so.toutiao.com/search?keyword=实拍哈马斯发射火箭弹击中以装甲车)
 1. [老教师呼吁学校取消与教育无关任务](https://so.toutiao.com/search?keyword=老教师呼吁学校取消与教育无关任务)
-1. [巴勒斯坦一青年向以军扔石块被射杀](https://so.toutiao.com/search?keyword=巴勒斯坦一青年向以军扔石块被射杀)
-1. [北大李玲教授：医药反腐只是手段](https://so.toutiao.com/search?keyword=北大李玲教授：医药反腐只是手段)
+1. [命案逃犯搜捕细节：森林发现其尸体](https://so.toutiao.com/search?keyword=命案逃犯搜捕细节：森林发现其尸体)
+1. [教育局回应学生被后桌夹挤拽头发](https://so.toutiao.com/search?keyword=教育局回应学生被后桌夹挤拽头发)
+1. [17岁脑瘫儿子摆摊妈妈藏角落支持](https://so.toutiao.com/search?keyword=17岁脑瘫儿子摆摊妈妈藏角落支持)
 1. [村民抢药材损失谁来负](https://so.toutiao.com/search?keyword=村民抢药材损失谁来负)
-1. [威少谈哈登加盟](https://so.toutiao.com/search?keyword=威少谈哈登加盟)
-1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
-1. [中方代表介绍安理会本月工作考虑](https://so.toutiao.com/search?keyword=中方代表介绍安理会本月工作考虑)
-1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [全班36名学生人人都是班干部](https://so.toutiao.com/search?keyword=全班36名学生人人都是班干部)
+1. [中方回应日本启动第三批核污水排海](https://so.toutiao.com/search?keyword=中方回应日本启动第三批核污水排海)
 1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
 1. [90后越剧女演员陈丽君回应走红](https://so.toutiao.com/search?keyword=90后越剧女演员陈丽君回应走红)
+1. [北大李玲教授：医药反腐只是手段](https://so.toutiao.com/search?keyword=北大李玲教授：医药反腐只是手段)
+1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
 1. [两人因擦碰扭打后仿佛无事发生](https://so.toutiao.com/search?keyword=两人因擦碰扭打后仿佛无事发生)
+1. [美联储主席：政府关门是潜在风险源](https://so.toutiao.com/search?keyword=美联储主席：政府关门是潜在风险源)
+1. [日本邀请中亚五国参加G7外长会](https://so.toutiao.com/search?keyword=日本邀请中亚五国参加G7外长会)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
+1. [55辆载有援助物资卡车进入加沙地带](https://so.toutiao.com/search?keyword=55辆载有援助物资卡车进入加沙地带)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [男子欠钱不还 用儿子微信消费110万](https://so.toutiao.com/search?keyword=男子欠钱不还+用儿子微信消费110万)
+1. [媒体：香港房价跌回7年前](https://so.toutiao.com/search?keyword=媒体：香港房价跌回7年前)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [外交部介绍本月安理会最重要工作](https://so.toutiao.com/search?keyword=外交部介绍本月安理会最重要工作)
+1. [威少谈哈登加盟](https://so.toutiao.com/search?keyword=威少谈哈登加盟)
+1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
+1. [美媒：拜登劝内塔尼亚胡考虑下台](https://so.toutiao.com/search?keyword=美媒：拜登劝内塔尼亚胡考虑下台)
+1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
+1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
+1. [两部门：稳慎扎实推进人民币国际化](https://so.toutiao.com/search?keyword=两部门：稳慎扎实推进人民币国际化)
+1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
+1. [黎向以发射数枚迫击炮 以炮击回应](https://so.toutiao.com/search?keyword=黎向以发射数枚迫击炮+以炮击回应)
+1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
+1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
+1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
+1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
+1. [农户大葱滞销不要了 村民冒雪拔葱](https://so.toutiao.com/search?keyword=农户大葱滞销不要了+村民冒雪拔葱)
+1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
+1. [法提议国际联盟打击哈马斯 俄回应](https://so.toutiao.com/search?keyword=法提议国际联盟打击哈马斯+俄回应)
+1. [网友连续3天拍到女孩被前后桌夹击](https://so.toutiao.com/search?keyword=网友连续3天拍到女孩被前后桌夹击)
+1. [嫌犯尚金勇搜捕细节：森林发现尸体](https://so.toutiao.com/search?keyword=嫌犯尚金勇搜捕细节：森林发现尸体)
+1. [80岁大娘骑二八杠卖菜身轻如燕上车](https://so.toutiao.com/search?keyword=80岁大娘骑二八杠卖菜身轻如燕上车)
+1. [巴勒斯坦一青年向以军扔石块被射杀](https://so.toutiao.com/search?keyword=巴勒斯坦一青年向以军扔石块被射杀)
+1. [中方代表介绍安理会本月工作考虑](https://so.toutiao.com/search?keyword=中方代表介绍安理会本月工作考虑)
 1. [外媒：儿童是巴以冲突终极受害者](https://so.toutiao.com/search?keyword=外媒：儿童是巴以冲突终极受害者)
-1. [中方回应日本启动第三批核污水排海](https://so.toutiao.com/search?keyword=中方回应日本启动第三批核污水排海)
 1. [央行：防范人民币汇率大起大落风险](https://so.toutiao.com/search?keyword=央行：防范人民币汇率大起大落风险)
 1. [雷军：小米14是我们阶段性成果](https://so.toutiao.com/search?keyword=雷军：小米14是我们阶段性成果)
-1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
-1. [曝江苏一副市长与女同事暧昧](https://so.toutiao.com/search?keyword=曝江苏一副市长与女同事暧昧)
-1. [媒体：香港房价跌回7年前](https://so.toutiao.com/search?keyword=媒体：香港房价跌回7年前)
-1. [美媒：拜登劝内塔尼亚胡考虑下台](https://so.toutiao.com/search?keyword=美媒：拜登劝内塔尼亚胡考虑下台)
 1. [“新一轮房改”来了？专家解读](https://so.toutiao.com/search?keyword=“新一轮房改”来了？专家解读)
 1. [“街溜子”鱼冲人吐口水](https://so.toutiao.com/search?keyword=“街溜子”鱼冲人吐口水)
 1. [实测捷途旅行者越野表现](https://so.toutiao.com/search?keyword=实测捷途旅行者越野表现)
-1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
 1. [主人跳皮筋 狗狗和马儿当工具人](https://so.toutiao.com/search?keyword=主人跳皮筋+狗狗和马儿当工具人)
-1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
-1. [两部门：稳慎扎实推进人民币国际化](https://so.toutiao.com/search?keyword=两部门：稳慎扎实推进人民币国际化)
 1. [男子晒控糖一年身体变化](https://so.toutiao.com/search?keyword=男子晒控糖一年身体变化)
 1. [康师傅回应饮品涨价](https://so.toutiao.com/search?keyword=康师傅回应饮品涨价)
-1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
-1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
 1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
 1. [浙江香榧丰收 男子发愁难卖](https://so.toutiao.com/search?keyword=浙江香榧丰收+男子发愁难卖)
 1. [拜登认为以总理将离任？白宫否认](https://so.toutiao.com/search?keyword=拜登认为以总理将离任？白宫否认)
-1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
 1. [希腊总理米佐塔基斯将访华](https://so.toutiao.com/search?keyword=希腊总理米佐塔基斯将访华)
-1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
-1. [全班36名学生人人都是班干部](https://so.toutiao.com/search?keyword=全班36名学生人人都是班干部)
 1. [女子辅导作业时崩溃扇孩子数十耳光](https://so.toutiao.com/search?keyword=女子辅导作业时崩溃扇孩子数十耳光)
 1. [媒体：水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=媒体：水庆霞更衣室与球员道别)
 1. [大闸蟹用抗生素浸泡防病？媒体辟谣](https://so.toutiao.com/search?keyword=大闸蟹用抗生素浸泡防病？媒体辟谣)
-1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
 1. [湖媒：詹姆斯仍是地球上最伟大球员](https://so.toutiao.com/search?keyword=湖媒：詹姆斯仍是地球上最伟大球员)
 1. [媒体：本轮美联储加息周期或已结束](https://so.toutiao.com/search?keyword=媒体：本轮美联储加息周期或已结束)
 1. [加沙16所医院停止运转51所诊所关闭](https://so.toutiao.com/search?keyword=加沙16所医院停止运转51所诊所关闭)
-1. [黎向以发射数枚迫击炮 以炮击回应](https://so.toutiao.com/search?keyword=黎向以发射数枚迫击炮+以炮击回应)
 1. [胡锡进谈中美将举行军控会谈](https://so.toutiao.com/search?keyword=胡锡进谈中美将举行军控会谈)
 1. [媒体：不得签订最低价协议意义重大](https://so.toutiao.com/search?keyword=媒体：不得签订最低价协议意义重大)
 1. [专家解读日菲防务合作再次升级](https://so.toutiao.com/search?keyword=专家解读日菲防务合作再次升级)
 1. [乌镇峰会临近 大会氛围愈浓](https://so.toutiao.com/search?keyword=乌镇峰会临近+大会氛围愈浓)
 1. [缅甸果敢民族民主同盟军谈电诈问题](https://so.toutiao.com/search?keyword=缅甸果敢民族民主同盟军谈电诈问题)
-1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
-1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
 1. [专家：10年后A股上市公司数将破万](https://so.toutiao.com/search?keyword=专家：10年后A股上市公司数将破万)
 1. [以议员观看以军遭袭惨烈画面落泪](https://so.toutiao.com/search?keyword=以议员观看以军遭袭惨烈画面落泪)
-1. [农户大葱滞销不要了 村民冒雪拔葱](https://so.toutiao.com/search?keyword=农户大葱滞销不要了+村民冒雪拔葱)
 1. [警方回应郑州一男子在马路上挥刀](https://so.toutiao.com/search?keyword=警方回应郑州一男子在马路上挥刀)
 1. [我国乳腺癌每年新发病例超40万](https://so.toutiao.com/search?keyword=我国乳腺癌每年新发病例超40万)
 1. [男子因高彩礼退婚拿16.8万辞职旅行](https://so.toutiao.com/search?keyword=男子因高彩礼退婚拿16.8万辞职旅行)
